--- a/showme5/package.json
+++ b/showme5/package.json
@@ -35,9 +35,10 @@
     "postcss-loader": "2.0.6",
     "promise": "8.0.1",
     "prop-types": "^15.5.10",
-    "react": "^15.6.1",
+    "react": "^15.6.2",
     "react-dev-utils": "^4.0.1",
-    "react-dom": "^15.6.1",
+    "react-dom": "^15.6.2",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "recompose": "^0.25.0",
     "style-loader": "0.18.2",
