--- a/showme5/package.json
+++ b/showme5/package.json
@@ -11,6 +11,7 @@
     "babel-loader": "7.1.1",
     "babel-preset-react-app": "^3.0.2",
     "babel-runtime": "6.26.0",
+    "bootstrap": "^4.0.0-beta",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.4",
@@ -40,6 +41,7 @@
     "react-dom": "^15.6.2",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "reactstrap": "^5.0.0-alpha.3",
     "recompose": "^0.25.0",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
